Fixed overflow issue in project section.

--- a/main.css
+++ b/main.css
@@ -247,18 +247,17 @@ header li:nth-child(2) {
 /*  Project Section  */
 
 .projects-container {
-    height: 120vh;
     margin: 0 auto;
+    padding: 60px 0;
     background-color: rgb(247, 247, 247);
 }
 
 .projects-inner-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 50vh 50vh;
     grid-gap: 10px;
     width: 1180px;
-    height: 100%;
     margin: 40px auto;
 }
 
@@ -300,21 +299,19 @@ header li:nth-child(2) {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 140px;
-    height: 140px;
-    background: red;
-    margin-top: -70px;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background: rgba(224, 224, 224, 0.5);
     z-index: 10;
-    border: 6px solid black;
-    border-radius: 50%;
+}
+
+.projects-icon:hover {
+    display: block
 }
 
 .projects-icon img {
     width: 50%;
-}
-
-.project-overlay {
-
 }
 
 /*  Contact Section  */
